style: add dark-metal banner to site

--- a/index.html
+++ b/index.html
@@ -6,24 +6,60 @@
   <title>⚡ Metal Riff Lab – ReaPack Edition</title>
   <style>
     body {
+      margin: 0;
       background-color: #0d0d0d;
       color: #e0e0e0;
       font-family: "Segoe UI", sans-serif;
       text-align: center;
-      margin: 4em auto;
-      max-width: 600px;
-      line-height: 1.5;
+      line-height: 1.6;
     }
-    h1 { color: #ff4444; letter-spacing: 1px; }
-    a { color: #00b3ff; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    header {
+      background: linear-gradient(135deg, #1a1a1a 0%, #333 50%, #1a1a1a 100%);
+      border-bottom: 3px solid #ff4444;
+      padding: 3em 1em;
+      text-align: center;
+      box-shadow: 0 0 10px #000 inset;
+    }
+    header h1 {
+      margin: 0;
+      color: #ff4444;
+      font-size: 2em;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+    main {
+      padding: 2em 1em;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    a {
+      color: #00b3ff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 3em;
+      font-size: 0.85em;
+      color: #888;
+    }
   </style>
-   
+</head>
 <body>
-  <h1>⚡ Metal Riff Lab – ReaPack Edition</h1>
-  <p>From riff to render — faster, heavier, cleaner.</p>
-  <p>Professional REAPER toolkit for metal and rock production.</p>
-  <p><a href="index.xml">→ Install via ReaPack</a></p>
-  <p><a href="https://github.com/travisloizosguitar-studio/MetalRiffLab-ReaPack">GitHub Repo</a></p>
+  <header>
+    <h1>⚡ Metal Riff Lab – ReaPack Edition</h1>
+  </header>
+  <main>
+    <p>From riff to render — faster, heavier, cleaner.</p>
+    <p>Professional REAPER toolkit for metal and rock production.</p>
+
+    <p><a href="index.xml">→ Install via ReaPack</a></p>
+    <p><a href="https://github.com/travisloizosguitar-studio/MetalRiffLab-ReaPack">GitHub Repo</a></p>
+  </main>
+  <footer>
+    Built by Travis Loizos Guitar Studio — All original riffs, no fluff.
+  </footer>
 </body>
 </html>
